kubernetes/apps/external/printer/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: printer
spec:
  parentRefs:
  - name: internal
    namespace: network
  hostnames:
  - printer.${SECRET_DOMAIN}
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: printer
      port: 443
